--- a/dreamlab/reports/latex/sections/agentic-engineering-services.tex
+++ b/dreamlab/reports/latex/sections/agentic-engineering-services.tex
@@ -8,8 +8,7 @@ DreamLab pioneers the UK's first comprehensive agentic engineering training prog
 
 \subsubsection{Foundational Agentic Systems}
 
-\begin{trainingpackage}
-\textbf{Introduction to Agentic Engineering} (3 days)
+\begin{trainingpackage}{Introduction to Agentic Engineering (3 days)}
 \begin{itemize}
     \item Understanding autonomous agents vs traditional AI
     \item Multi-agent system architectures
@@ -21,8 +20,7 @@ DreamLab pioneers the UK's first comprehensive agentic engineering training prog
 \textbf{Price}: \pounds{2,995} per person (includes accommodation)
 \end{trainingpackage}
 
-\begin{trainingpackage}
-\textbf{Advanced Multi-Agent Systems} (5 days)
+\begin{trainingpackage}{Advanced Multi-Agent Systems (5 days)}
 \begin{itemize}
     \item Hierarchical and distributed agent architectures
     \item Consensus mechanisms and coordination strategies
@@ -36,8 +34,7 @@ DreamLab pioneers the UK's first comprehensive agentic engineering training prog
 
 \subsubsection{Specialized Agentic Applications}
 
-\begin{trainingpackage}
-\textbf{Agentic Workflow Automation} (4 days)
+\begin{trainingpackage}{Agentic Workflow Automation (4 days)}
 \begin{itemize}
     \item Replacing traditional RPA with intelligent agents
     \item Self-healing and adaptive workflows
@@ -49,8 +46,7 @@ DreamLab pioneers the UK's first comprehensive agentic engineering training prog
 \textbf{Price}: \pounds{3,795} per person
 \end{trainingpackage}
 
-\begin{trainingpackage}
-\textbf{Creative AI Agents for Production} (3 days)
+\begin{trainingpackage}{Creative AI Agents for Production (3 days)}
 \begin{itemize}
     \item Autonomous content generation pipelines
     \item Agent-based VFX and animation workflows
@@ -63,8 +59,7 @@ DreamLab pioneers the UK's first comprehensive agentic engineering training prog
 
 \subsubsection{Engineering-Specific Agentic Systems}
 
-\begin{table}[H]
-\centering
+\begin{table}
 \begin{tabularx}{\textwidth}{lXrr}
 \toprule
 \textbf{Program} & \textbf{Focus Area} & \textbf{Duration} & \textbf{Price} \\
@@ -81,12 +76,12 @@ Swarm Robotics & Physical agent coordination & 3 days & \pounds{3,795} \\
 
 \subsubsection{Infrastructure for Agent Development}
 
-\begin{labspec}
-Agent Development Cluster & 20 GPU nodes for parallel training & 1 & \pounds{150,000} \\
-Edge Computing Array & Distributed agent deployment testing & 1 & \pounds{45,000} \\
-Robotics Test Arena & Physical agent interaction space & 1 & \pounds{75,000} \\
-Monitoring \& Analytics & Real-time agent behavior analysis & 1 & \pounds{35,000} \\
-\end{labspec}
+% \begin{labspec}
+% Agent Development Cluster & 20 GPU nodes for parallel training & 1 & \pounds{150,000} \\
+% Edge Computing Array & Distributed agent deployment testing & 1 & \pounds{45,000} \\
+% Robotics Test Arena & Physical agent interaction space & 1 & \pounds{75,000} \\
+% Monitoring \& Analytics & Real-time agent behavior analysis & 1 & \pounds{35,000}
+% \end{labspec}
 
 \subsubsection{Software Stack}
 
@@ -139,7 +134,7 @@ Monitoring \& Analytics & Real-time agent behavior analysis & 1 & \pounds{35,000
         Proof of concept\\[0.5em]
         \textbf{\pounds{15,000}}
     };
-    
+
     % Pilot Package
     \node[rectangle, draw=dreamlab-grey, fill=dreamlab-grey!20, minimum width=4cm, minimum height=3cm, align=center] at (5,0) {
         \textbf{Pilot}\\[0.5em]
@@ -149,7 +144,7 @@ Monitoring \& Analytics & Real-time agent behavior analysis & 1 & \pounds{35,000
         Deploy to production\\[0.5em]
         \textbf{\pounds{50,000}}
     };
-    
+
     % Transformation Package
     \node[rectangle, draw=dreamlab-purple, fill=dreamlab-purple!20, minimum width=4cm, minimum height=3cm, align=center] at (10,0) {
         \textbf{Transform}\\[0.5em]
@@ -179,7 +174,7 @@ DreamLab partners with leading organizations to advance agentic engineering:
 
 \subsection{Certification \& Career Pathways}
 
-\begin{table}[H]
+\begin{table}
 \centering
 \begin{tabular}{llr}
 \toprule
