--- a/dreamlab/reports/latex/sections/appendix-solar-analysis.tex
+++ b/dreamlab/reports/latex/sections/appendix-solar-analysis.tex
@@ -89,7 +89,7 @@ Battery Storage (3x) & 11,500 & 32.9\% \\
 
 % Break-even line
 \addplot[
-    color=accent-red,
+    color=dreamlab-orange,
     dashed,
     line width=1pt
 ] coordinates {(0,0) (25,0)};
@@ -139,8 +139,8 @@ Battery Storage (3x) & 11,500 & 32.9\% \\
 \subsubsection{Carbon Footprint Reduction}
 
 \begin{itemize}
-    \item \textbf{Annual CO₂ Savings}: 5.4 tonnes
-    \item \textbf{25-Year Total}: 135 tonnes CO₂
+    \item \textbf{Annual CO\textsubscript{2} Savings}: 5.4 tonnes
+    \item \textbf{25-Year Total}: 135 tonnes CO\textsubscript{2}
     \item \textbf{Equivalent to}: Planting 6,200 trees
     \item \textbf{Grid Independence}: 70-80\% self-sufficiency
 \end{itemize}
@@ -172,14 +172,14 @@ Recycling Rate & End-of-life material recovery & 95\% \\
         \item Use during peak pricing periods
         \item Annual savings: £1,800
     \end{itemize}
-    
+
     \item \textbf{Grid Independence}
     \begin{itemize}
         \item 2-3 days autonomous operation
         \item Protection from power outages
         \item Critical for lab equipment protection
     \end{itemize}
-    
+
     \item \textbf{Load Balancing}
     \begin{itemize}
         \item Smooth out demand spikes
