--- a/dreamlab/reports/latex/sections/business-model.tex
+++ b/dreamlab/reports/latex/sections/business-model.tex
@@ -11,35 +11,35 @@ DreamLab's innovative business model leverages complementary revenue streams tha
         \textbf{DreamLab}\\
         \textbf{Revenue Hub}
     };
-    
+
     % Training revenue
     \node[rectangle, draw=dreamlab-blue, fill=dreamlab-blue!20, minimum width=4cm, minimum height=2cm, align=center] (training) at (-5,2) {
         \textbf{AI Training}\\
         Mon-Fri Focus\\
         70\% of revenue
     };
-    
+
     % Letting revenue
     \node[rectangle, draw=dreamlab-green, fill=dreamlab-green!20, minimum width=4cm, minimum height=2cm, align=center] (letting) at (5,2) {
         \textbf{Holiday Letting}\\
         Weekends/Holidays\\
         20\% of revenue
     };
-    
+
     % Consultancy revenue
     \node[rectangle, draw=dreamlab-orange, fill=dreamlab-orange!20, minimum width=4cm, minimum height=2cm, align=center] (consult) at (-5,-2) {
         \textbf{Consultancy}\\
         Project-based\\
         10\% of revenue
     };
-    
+
     % Online revenue
     \node[rectangle, draw=dreamlab-grey, fill=dreamlab-grey!20, minimum width=4cm, minimum height=2cm, align=center] (online) at (5,-2) {
         \textbf{Online/Hybrid}\\
         Scalable growth\\
         Future expansion
     };
-    
+
     % Connections
     \draw[thick, ->] (training) -- (hub);
     \draw[thick, ->] (letting) -- (hub);
@@ -58,12 +58,12 @@ DreamLab's innovative business model leverages complementary revenue streams tha
 \toprule
 \textbf{Training Type} & \textbf{Price/Person} & \textbf{Capacity} & \textbf{Frequency} & \textbf{Annual Sessions} & \textbf{Revenue} \\
 \midrule
-3-Day Bootcamp & \pounds{1,495} & 12 & Weekly & 40 & \pounds{718,000} \\
-2-Day Workshop & \pounds{995} & 12 & Bi-weekly & 20 & \pounds{238,000} \\
-5-Day Intensive & \pounds{2,995} & 10 & Monthly & 10 & \pounds{299,000} \\
+3-Day Bootcamp & \pounds{1,495} & 6 & Weekly & 40 & \pounds{358,800} \\
+2-Day Workshop & \pounds{995} & 6 & Bi-weekly & 20 & \pounds{119,400} \\
+5-Day Intensive & \pounds{2,995} & 6 & Monthly & 10 & \pounds{179,700} \\
 Corporate Package & \pounds{25,000} & Team & Monthly & 12 & \pounds{300,000} \\
 \midrule
-\multicolumn{5}{r}{\textbf{Total Training Revenue (Year 3):}} & \textbf{\pounds{1,555,000}} \\
+\multicolumn{5}{r}{\textbf{Total Training Revenue (Year 3):}} & \textbf{\pounds{957,900}} \\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -93,11 +93,11 @@ Low (Nov-Mar) & \pounds{175} & 40\% & 100 & \pounds{7,000} \\
     \item \textbf{Lead Generation}
     \begin{itemize}
         \item LinkedIn outreach to L\&D managers
-        \item Tech Wales network events
+        \item Sellafield supply chain and North West industry events
         \item Webinar series on AI adoption
         \item Partnership referrals
     \end{itemize}
-    
+
     \item \textbf{Sales Funnel}
     \begin{itemize}
         \item Initial consultation (free)
@@ -106,7 +106,7 @@ Low (Nov-Mar) & \pounds{175} & 40\% & 100 & \pounds{7,000} \\
         \item Pilot programme option
         \item Contract negotiation
     \end{itemize}
-    
+
     \item \textbf{Account Management}
     \begin{itemize}
         \item Dedicated account manager
@@ -154,10 +154,10 @@ Our pricing reflects the unique value proposition:
 
 \begin{itemize}
     \item \textbf{Early Bird Discounts}: 15\% off for bookings 2+ months ahead
-    \item \textbf{Group Rates}: 20\% discount for 5+ participants
+    \item \textbf{Group Rates}: 20\% discount for 3+ participants
     \item \textbf{Alumni Pricing}: 25\% off returning students
     \item \textbf{Off-Peak Rates}: 30\% reduction for November-February training
-    \item \textbf{Welsh Business Discount}: 10\% for local companies
+    \item \textbf{Cumbrian Business Discount}: 10\% for local companies
 \end{itemize}
 
 \subsection{Customer Retention Strategy}
@@ -169,25 +169,25 @@ Our pricing reflects the unique value proposition:
         First training\\
         experience
     };
-    
+
     \node[rectangle, draw=dreamlab-blue, fill=dreamlab-blue!20, align=center, right=of acquire] (engage) {
         \textbf{Engage}\\
         Alumni network\\
         Continuous learning
     };
-    
+
     \node[rectangle, draw=dreamlab-green, fill=dreamlab-green!20, align=center, right=of engage] (expand) {
         \textbf{Expand}\\
         Advanced courses\\
         Team training
     };
-    
+
     \node[rectangle, draw=dreamlab-orange, fill=dreamlab-orange!20, align=center, below=of engage] (advocate) {
         \textbf{Advocate}\\
         Referrals\\
         Case studies
     };
-    
+
     \draw[thick, ->] (acquire) -- (engage);
     \draw[thick, ->] (engage) -- (expand);
     \draw[thick, ->] (expand) -- (advocate);
@@ -203,7 +203,7 @@ Strategic partnerships provide additional revenue streams:
     \item \textbf{University Partnerships}: \pounds{50,000}/year for student programmes
     \item \textbf{Vendor Certifications}: 20\% commission on certification exams
     \item \textbf{Corporate Memberships}: \pounds{25,000}/year for unlimited access
-    \item \textbf{Government Contracts}: Welsh Gov skills programmes
+    \item \textbf{Government Contracts}: National / Regional skills programmes
 \end{itemize}
 
 \subsection{Unit Economics}
@@ -214,11 +214,11 @@ Strategic partnerships provide additional revenue streams:
 \toprule
 \textbf{Metric} & \textbf{Training} & \textbf{Holiday Let} \\
 \midrule
-Average Transaction Value & \pounds{1,745} & \pounds{185}/night \\
-Customer Acquisition Cost & \pounds{215} & \pounds{45} \\
-Gross Margin & 68\% & 82\% \\
-Customer Lifetime Value & \pounds{8,500} & \pounds{1,200} \\
-Payback Period & 1.2 months & 0.8 months \\
+Average Transaction Value & \pounds{1,995} & \pounds{225}/night \\
+Customer Acquisition Cost & \pounds{250} & \pounds{55} \\
+Gross Margin & 75\% & 85\% \\
+Customer Lifetime Value & \pounds{9,500} & \pounds{1,500} \\
+Payback Period & 1.5 months & 1.0 months \\
 \bottomrule
 \end{tabular}
 \end{table}
