--- a/dreamlab/reports/latex/sections/company-overview.tex
+++ b/dreamlab/reports/latex/sections/company-overview.tex
@@ -10,36 +10,24 @@
 
 \subsection{Company Structure}
 
-DreamLab AI Consulting Ltd is a private limited company incorporated in Wales, specialising in:
+DreamLab AI Ltd is a private limited company registered in England (Wilmslow, Manchester), focusing on technology and training services. A separate sole trader entity, registered in Cumbria, will manage the eco-luxury accommodation and related services.
 
+The business specialises in:
 \begin{itemize}
     \item Advanced AI/ML training and consultancy services
     \item Sustainable technology demonstrations
-    \item Eco-luxury holiday accommodation
-    \item Corporate retreat and team-building programmes
+    \item Eco-luxury holiday accommodation and corporate retreats
 \end{itemize}
 
 \subsection{Founding Team}
 
-\begin{table}[H]
-\centering
-\begin{tabularx}{\textwidth}{lXl}
-\toprule
-\textbf{Role} & \textbf{Background} & \textbf{Expertise} \\
-\midrule
-CEO/Founder & 15+ years in AI/ML development & Technical leadership, Business strategy \\
-CTO & Former Silicon Valley ML engineer & Infrastructure, Training design \\
-COO & Hospitality \& sustainability expert & Operations, Guest experience \\
-CFO & Chartered accountant, Tech startup experience & Financial planning, Fundraising \\
-\bottomrule
-\end{tabularx}
-\end{table}
+The company is led by a single founder, with a flexible model of bringing in specialist contractors and partners on a per-project basis to meet specific client needs.
 
 \subsection{Legal Structure and Governance}
 
 \begin{itemize}
     \item \textbf{Company Type}: Private Limited Company (Ltd)
-    \item \textbf{Registration}: Companies House Wales
+    \item \textbf{Registration}: Companies House England
     \item \textbf{VAT Status}: Registered for both training services and accommodation
     \item \textbf{Insurance}: Professional indemnity, Public liability, Property insurance
     \item \textbf{Certifications}: ISO 27001 (planned), Cyber Essentials Plus
@@ -47,28 +35,14 @@ CFO & Chartered accountant, Tech startup experience & Financial planning, Fundra
 
 \subsection{Strategic Partnerships}
 
-\begin{enumerate}
-    \item \textbf{Technology Partners}
-    \begin{itemize}
-        \item NVIDIA - GPU hardware and training materials
-        \item Microsoft Azure - Cloud computing credits for students
-        \item OpenAI - Educational API access
-    \end{itemize}
-    
-    \item \textbf{Academic Partnerships}
-    \begin{itemize}
-        \item Cardiff University - Research collaboration
-        \item Swansea University - Student placement programmes
-        \item Open University - Distance learning integration
-    \end{itemize}
-    
-    \item \textbf{Industry Associations}
-    \begin{itemize}
-        \item Welsh Government - Innovation funding
-        \item Tech Wales - Network and promotion
-        \item UK AI Council - Policy and standards
-    \end{itemize}
-\end{enumerate}
+DreamLab will collaborate with a network of partners to deliver its vision:
+\begin{itemize}
+    \item \textbf{Technology Providers}: Partnerships with leading hardware and software companies like NVIDIA, Microsoft Azure, and OpenAI to ensure access to cutting-edge tools.
+    \item \textbf{Simulation and Virtual Production}: Collaborations with virtual production studios and simulation technology providers across the UK.
+    \item \textbf{Academic Institutions}: Engaging with universities for research collaboration and talent development.
+    \item \textbf{DreamLab Collective}: Leveraging the expertise of the wider DreamLab network of specialists and consultants.
+    \item \textbf{Industry Bodies}: Working with organisations like the UK AI Council to align with national standards and policy.
+\end{itemize}
 
 \subsection{Competitive Advantages}
 
@@ -76,13 +50,13 @@ CFO & Chartered accountant, Tech startup experience & Financial planning, Fundra
 \begin{tikzpicture}[node distance=2cm]
     % Central node
     \node[circle, draw=dreamlab-purple, fill=dreamlab-lightgrey, minimum size=3cm, align=center] (center) {\textbf{DreamLab}\\\textbf{Advantages}};
-    
+
     % Surrounding advantages
     \node[rectangle, draw=dreamlab-blue, fill=dreamlab-lightblue!20, align=center, above=of center] (adv1) {Unique Dual\\Revenue Model};
     \node[rectangle, draw=dreamlab-green, fill=dreamlab-green!20, align=center, right=of center] (adv2) {Hands-on\\Lab Equipment};
     \node[rectangle, draw=dreamlab-orange, fill=dreamlab-orange!20, align=center, below=of center] (adv3) {Sustainable\\Operations};
     \node[rectangle, draw=dreamlab-grey, fill=dreamlab-grey!20, align=center, left=of center] (adv4) {Rural Location\\Benefits};
-    
+
     % Connect nodes
     \draw[->] (center) -- (adv1);
     \draw[->] (center) -- (adv2);
