--- a/dreamlab/reports/latex/sections/executive-summary-final.tex
+++ b/dreamlab/reports/latex/sections/executive-summary-final.tex
@@ -1,23 +1,15 @@
 \begin{executivesummary}
-DreamLab AI Ltd represents a pioneering convergence of creative technology, agentic engineering, and advanced simulation in a residential training environment. Located in the stunning Welsh countryside, our facility bridges the gap between artistic vision, autonomous systems, and technical precision through immersive, hands-on learning experiences. Our unique business model combines:
+DreamLab AI Ltd represents a pioneering convergence of creative technology, agentic engineering, and advanced simulation in a residential training environment. Located on a 1.5 acre plot in Eskdale Green, Cumbria, 10 minutes drive from Sellafield Nuclear Storage and Processing, our facility bridges the gap between artistic vision, autonomous systems, and technical precision through immersive, hands-on learning experiences. Our unique business model combines:
 
 \begin{itemize}
-    \item \textbf{Creative Technology Hub}: State-of-the-art virtual production facility with LED volume, motion capture, and neural rendering capabilities
-    \item \textbf{Agentic Engineering Center}: UK's first dedicated training facility for autonomous agent systems and multi-agent architectures
-    \item \textbf{Engineering Simulation Lab}: Advanced visualization for CAE, CFD, and FEA with real-time rendering integration
-    \item \textbf{Emerging Tech Training}: Specialized programs in gaussian splatting, telepresence, drone autonomy, and XR
-    \item \textbf{Sustainable Accommodation}: Eco-luxury residential facilities powered by renewable energy
+    \item \textbf{Creative Technology Hub}: State-of-the-art virtual production facility with a media and AI lab.
+    \item \textbf{Target Audience}: Decision makers in diverse industries, with small cohort sizes of 3-6.
+    \item \textbf{Accommodation}: 3 bedrooms, a kitchen, a gym, and a sauna, available for corporate training or rental to the mobile engineering community and families.
 \end{itemize}
 
 \subsection*{Key Investment Highlights}
 
-\begin{center}
-\dualrevenuekpi{Year 1 Revenue}{\pounds{450,000}}{\pounds{45,000}}{Combined: \pounds{495,000}}
-\quad
-\dualrevenuekpi{Year 3 Projection}{\pounds{3,350,000}}{\pounds{150,000}}{Combined: \pounds{3,500,000}}
-\quad
-\dualrevenuekpi{Market Position}{First in UK}{Agentic + Creative}{Unique Convergence}
-\end{center}
+% [Moved KPI graphics after summary]
 
 \subsection*{Strategic Advantages}
 
@@ -31,51 +23,15 @@ DreamLab AI Ltd represents a pioneering convergence of creative technology, agen
 
 \subsection*{Market Opportunity}
 
-\begin{table}[H]
-\centering
-\begin{tabular}{lrr}
-\toprule
-\textbf{Market Segment} & \textbf{UK Market Size} & \textbf{Growth Rate} \\
-\midrule
-Virtual Production Training & \pounds{125}M & 45\% CAGR \\
-Agentic Systems Training & \pounds{210}M & 65\% CAGR \\
-Engineering Simulation & \pounds{280}M & 12\% CAGR \\
-XR/Telepresence Training & \pounds{95}M & 68\% CAGR \\
-AI/ML for Creatives & \pounds{180}M & 35\% CAGR \\
-\bottomrule
-\end{tabular}
-\end{table}
+% [Moved market table after summary]
 
 \subsection*{Revenue Model Evolution}
 
-\begin{center}
-\begin{tikzpicture}[scale=0.8]
-    \pie[color={dreamlab-purple, dreamlab-blue, dreamlab-green, dreamlab-orange, dreamlab-grey}]{
-        35/Creative Technology,
-        25/Agentic Engineering,
-        20/Engineering Simulation,
-        15/Nuclear \& Energy,
-        5/Other Services
-    }
-\end{tikzpicture}
-\end{center}
+% [Moved revenue pie chart after summary]
 
 \subsection*{Financial Summary}
 
-\begin{table}[H]
-\centering
-\begin{tabular}{lrrr}
-\toprule
-\textbf{Metric} & \textbf{Year 1} & \textbf{Year 3} & \textbf{Year 5} \\
-\midrule
-Total Revenue & \pounds{495,000} & \pounds{3,500,000} & \pounds{6,500,000} \\
-Creative Tech Revenue & \pounds{173,000} & \pounds{1,225,000} & \pounds{2,275,000} \\
-Agentic Engineering & \pounds{124,000} & \pounds{875,000} & \pounds{1,625,000} \\
-Operating Margin & 18\% & 38\% & 45\% \\
-EBITDA & \pounds{89,000} & \pounds{1,330,000} & \pounds{2,925,000} \\
-\bottomrule
-\end{tabular}
-\end{table}
+% [Moved financial summary table after summary]
 
 \subsection*{Investment Requirements}
 
@@ -112,17 +68,5 @@ Total capital requirement: \pounds{950,000}
     \item \textbf{Industry Connections}: Direct pathways to employment and partnerships
 \end{enumerate}
 
-\subsection*{Exit Strategy}
-
-Multiple exit opportunities within 5-7 years:
-\begin{itemize}
-    \item Strategic acquisition by global training provider (Pluralsight, Coursera, Udacity)
-    \item Creative technology company expansion (Unity, Epic Games, Autodesk)
-    \item AI platform acquisition (Microsoft, Google, OpenAI ecosystem)
-    \item Private equity roll-up of specialized training facilities
-    \item Management buyout with retained growth equity
-\end{itemize}
-
-Target exit valuation: \pounds{45-65M (7-10x Year 5 revenue)
 
 \end{executivesummary}
