--- a/dreamlab/reports/latex/sections/market-opportunity.tex
+++ b/dreamlab/reports/latex/sections/market-opportunity.tex
@@ -12,7 +12,7 @@ The global AI training market is experiencing unprecedented growth, driven by di
 \midrule
 Global AI Training Market & \$4.2 billion & \$12.8 billion \\
 UK AI Training Market & \pounds{320} million & \pounds{980} million \\
-Wales Tech Training & \pounds{15} million & \pounds{45} million \\
+North West Tech Training & \pounds{50} million & \pounds{150} million \\
 Corporate AI Education & \$2.1 billion & \$7.5 billion \\
 \bottomrule
 \end{tabular}
@@ -31,7 +31,7 @@ Corporate AI Education & \$2.1 billion & \$7.5 billion \\
         \item Government departments and public sector
         \item Financial services and insurance companies
     \end{itemize}
-    
+
     \item \textbf{Individual Professionals} (25\% of revenue)
     \begin{itemize}
         \item Software developers transitioning to AI
@@ -39,7 +39,7 @@ Corporate AI Education & \$2.1 billion & \$7.5 billion \\
         \item Business analysts learning AI applications
         \item Consultants expanding service offerings
     \end{itemize}
-    
+
     \item \textbf{Holiday Lettings} (15\% of revenue)
     \begin{itemize}
         \item Tech professionals seeking working holidays
@@ -65,7 +65,7 @@ Corporate AI Education & \$2.1 billion & \$7.5 billion \\
         ymajorgrids=true,
         grid style=dashed,
     ]
-    
+
     \addplot[
         color=dreamlab-purple,
         mark=square,
@@ -75,7 +75,7 @@ Corporate AI Education & \$2.1 billion & \$7.5 billion \\
         (2020,45)(2021,68)(2022,95)(2023,125)(2024,165)(2025,195)(2026,235)(2027,265)(2028,290)
     };
     \addlegendentry{AI Skills Demand}
-    
+
     \addplot[
         color=dreamlab-blue,
         mark=o,
@@ -85,7 +85,7 @@ Corporate AI Education & \$2.1 billion & \$7.5 billion \\
         (2020,30)(2021,38)(2022,45)(2023,55)(2024,68)(2025,82)(2026,98)(2027,115)(2028,135)
     };
     \addlegendentry{Available AI Professionals}
-    
+
     \end{axis}
 \end{tikzpicture}
 \end{center}
@@ -107,36 +107,36 @@ Corporate Training & Industry specific & No & No \\
 \end{tabularx}
 \end{table}
 
-\subsection{Wales Technology Sector Growth}
+\subsection{North West Technology Sector Growth}
 
 \begin{keypoint}
-Wales is experiencing significant growth in its technology sector:
+The North West of England is a major technology hub with significant growth drivers:
 \begin{itemize}
-    \item 12\% annual growth in tech businesses (2020-2024)
-    \item \pounds{2.1} billion contribution to Welsh economy
-    \item 40,000+ employed in tech roles
-    \item Strong government support through Tech Wales initiative
+    \item Home to MediaCityUK and a thriving digital and creative sector.
+    \item Strong presence in advanced manufacturing, nuclear energy, and engineering.
+    \item Over 140,000 people employed in the digital technology sector.
+    \item Key initiatives like the Northern Powerhouse to drive economic growth.
 \end{itemize}
 \end{keypoint}
 
-\subsection{Holiday Let Market in Wales}
+\subsection{Holiday Let Market in Cumbria}
 
-The Welsh holiday let market provides strong secondary revenue potential:
+The Cumbrian holiday let market, particularly around the Lake District National Park, is robust and offers premium revenue opportunities:
 
 \begin{itemize}
-    \item Average occupancy rate: 72\% (rural properties with unique features)
-    \item Average nightly rate: \pounds{150-250} for luxury eco-properties
-    \item Growing demand for ``workation'' properties with high-speed internet
-    \item 35\% increase in eco-tourism bookings (2022-2024)
+    \item Average occupancy rate: 80\%+ for high-quality properties, especially those with unique features.
+    \item Average nightly rate: \pounds{200-350} for luxury, well-located properties.
+    \item High demand for properties catering to both tourism and professionals working with the Sellafield supply chain.
+    \item Strong year-round demand driven by tourism and corporate bookings.
 \end{itemize}
 
 \subsection{Market Entry Strategy}
 
 \begin{enumerate}
-    \item \textbf{Phase 1}: Focus on South Wales corporate market
-    \item \textbf{Phase 2}: Expand to UK-wide remote training programmes
-    \item \textbf{Phase 3}: International corporate retreats and intensive bootcamps
-    \item \textbf{Phase 4}: Online hybrid programmes leveraging lab infrastructure
+    \item \textbf{Phase 1}: Target the Sellafield and nuclear supply chain corporate market, offering specialised training and accommodation.
+    \item \textbf{Phase 2}: Expand services to the wider North West corporate sector, including advanced manufacturing and technology firms.
+    \item \textbf{Phase 3}: Develop UK-wide remote and hybrid training programmes.
+    \item \textbf{Phase 4}: Establish as a destination for international corporate retreats and specialised technical bootcamps.
 \end{enumerate}
 
 \subsection{Addressable Market Calculation}
@@ -147,10 +147,10 @@ The Welsh holiday let market provides strong secondary revenue potential:
 \toprule
 \textbf{Segment} & \textbf{Market Size} & \textbf{Target Share} & \textbf{Revenue Potential} \\
 \midrule
-Wales Corporate Training & \pounds{8}m & 2.5\% & \pounds{200,000} \\
+North West Corporate Training & \pounds{25}m & 1.0\% & \pounds{250,000} \\
 UK Remote Training & \pounds{45}m & 0.5\% & \pounds{225,000} \\
-Holiday Lettings & \pounds{12}m & 0.8\% & \pounds{96,000} \\
-\textbf{Total Year 3 TAM} & & & \textbf{\pounds{521,000}} \\
+Cumbria Holiday Lettings & \pounds{20}m & 0.5\% & \pounds{100,000} \\
+\textbf{Total Year 3 TAM} & & & \textbf{\pounds{575,000}} \\
 \bottomrule
 \end{tabular}
 \end{table}
