--- a/dreamlab/reports/latex/sections/marketing-strategy.tex
+++ b/dreamlab/reports/latex/sections/marketing-strategy.tex
@@ -12,8 +12,8 @@
 \midrule
 Creative Studios & Film, VFX, game development companies & 4,600+ & High \\
 Tech Innovators & Companies adopting agentic systems & 2,200+ & High \\
+Energy Sector & Nuclear and renewable energy & 1,100+ & High \\
 Engineering Firms & CAE/simulation users & 8,400+ & Medium \\
-Energy Sector & Nuclear and renewable energy & 1,100+ & Medium \\
 Individual Professionals & Freelancers and career changers & 45,000+ & Low \\
 \bottomrule
 \end{tabularx}
@@ -56,7 +56,7 @@ Individual Professionals & Freelancers and career changers & 45,000+ & Low \\
 
 \subsubsection{Place Strategy}
 \begin{itemize}
-    \item Primary facility in Wales
+    \item Primary facility in Cumbria
     \item Online platform for global reach
     \item Partner locations for satellite programs
     \item On-site corporate training options
@@ -118,7 +118,7 @@ Industry Publications & \pounds{2,000} & \pounds{250} & 3.0x \\
 Technology Vendors & Co-marketing, equipment access & In Progress \\
 Industry Bodies & Credibility, member benefits & Planned \\
 Universities & Academic pathways, research & Exploratory \\
-Government & Funding, regional development & Active \\
+Government & Funding, regional development & Planned \\
 Media Partners & Coverage, thought leadership & Developing \\
 \bottomrule
 \end{tabularx}
@@ -133,25 +133,25 @@ Media Partners & Coverage, thought leadership & Developing \\
         SEO, Ads, Content\\
         Partners, PR
     };
-    
+
     \node[rectangle, draw=dreamlab-blue, fill=dreamlab-blue!20, align=center, right=of aware] (consider) {
         \textbf{Consideration}\\
         Website, Demos\\
         Reviews, Tours
     };
-    
+
     \node[rectangle, draw=dreamlab-green, fill=dreamlab-green!20, align=center, right=of consider] (decide) {
         \textbf{Decision}\\
         Consultation\\
         Financing, Booking
     };
-    
+
     \node[rectangle, draw=dreamlab-orange, fill=dreamlab-orange!20, align=center, below=of consider] (loyalty) {
         \textbf{Loyalty}\\
         Alumni Network\\
         Advanced Programs
     };
-    
+
     \draw[thick, ->] (aware) -- (consider);
     \draw[thick, ->] (consider) -- (decide);
     \draw[thick, ->] (decide) -- (loyalty);
