--- a/dreamlab/reports/latex/sections/service-offerings-updated.tex
+++ b/dreamlab/reports/latex/sections/service-offerings-updated.tex
@@ -105,38 +105,13 @@ AI Audio \& Music & Neural audio synthesis and processing & 2 days & \pounds{1,5
 
 \subsubsection{Studio Transformation Programs}
 
-\begin{center}
-\begin{tikzpicture}[scale=0.9]
-    % Starter Package
-    \node[rectangle, draw=dreamlab-orange, fill=dreamlab-orange!20, minimum width=4cm, minimum height=3cm, align=center] at (0,0) {
-        \textbf{Starter Studio}\\[0.5em]
-        5-8 participants\\
-        3-day intensive\\
-        Core VP training\\[0.5em]
-        \textbf{\pounds{15,000}}
-    };
-    
-    % Professional Package
-    \node[rectangle, draw=dreamlab-grey, fill=dreamlab-grey!20, minimum width=4cm, minimum height=3cm, align=center] at (5,0) {
-        \textbf{Professional}\\[0.5em]
-        10-15 participants\\
-        5-day program\\
-        VP + Simulation\\
-        On-site option\\[0.5em]
-        \textbf{\pounds{35,000}}
-    };
-    
-    % Enterprise Package
-    \node[rectangle, draw=dreamlab-purple, fill=dreamlab-purple!20, minimum width=4cm, minimum height=3cm, align=center] at (10,0) {
-        \textbf{Enterprise}\\[0.5em]
-        20+ participants\\
-        Custom curriculum\\
-        Ongoing support\\
-        Certification\\[0.5em]
-        \textbf{\pounds{75,000}+}
-    };
-\end{tikzpicture}
-\end{center}
+We offer bespoke corporate packages designed for small, focused teams. These packages are tailored to the specific needs of the organisation and are priced based on the curriculum, duration, and required resources. Example packages include:
+\begin{itemize}
+    \item \textbf{Starter Package}: A 3-day intensive for a team of 3-6, focusing on core concepts.
+    \item \textbf{Professional Package}: A 5-day deep-dive for a team of 3-6, combining multiple disciplines.
+    \item \textbf{Enterprise Solution}: A fully customised, multi-week program with ongoing support and certification.
+\end{itemize}
+Pricing is determined upon consultation, starting from \pounds{15,000}.
 
 \subsubsection{Innovation Lab Services}
 
@@ -215,14 +190,14 @@ Decommissioning Viz & 3D planning and simulation & 3 days & \pounds{3,795} \\
 
 \subsection{Revenue Mix Strategy - Updated}
 
-\begin{center}
-\begin{tikzpicture}
-    \pie[color={dreamlab-purple, dreamlab-blue, dreamlab-green, dreamlab-orange, dreamlab-grey}]{
-        50/Creative Technology,
-        20/Engineering Simulation,
-        20/Nuclear \& Energy,
-        5/Equipment Rental,
-        5/Online Programs
-    }
-\end{tikzpicture}
-\end{center}
+% \begin{center}
+% \begin{tikzpicture}
+%     \pie[color={dreamlab-purple, dreamlab-blue, dreamlab-green, dreamlab-orange, dreamlab-grey}]{
+%         50/Creative Technology,
+%         20/Engineering Simulation,
+%         20/Nuclear \& Energy,
+%         5/Equipment Rental,
+%         5/Online Programs
+%     }
+% \end{tikzpicture}
+% \end{center}
