--- a/dreamlab/reports/latex/sections/service-offerings.tex
+++ b/dreamlab/reports/latex/sections/service-offerings.tex
@@ -86,7 +86,7 @@ Quantum ML & Quantum computing basics & 2 days & \pounds{1,495} \\
         Standard labs\\[0.5em]
         \textbf{\pounds{12,500}}
     };
-    
+
     % Silver Package
     \node[rectangle, draw=dreamlab-grey, fill=dreamlab-grey!20, minimum width=4cm, minimum height=3cm, align=center] at (5,0) {
         \textbf{Silver Package}\\[0.5em]
@@ -96,7 +96,7 @@ Quantum ML & Quantum computing basics & 2 days & \pounds{1,495} \\
         Accommodation\\[0.5em]
         \textbf{\pounds{27,500}}
     };
-    
+
     % Gold Package
     \node[rectangle, draw=dreamlab-purple, fill=dreamlab-purple!20, minimum width=4cm, minimum height=3cm, align=center] at (10,0) {
         \textbf{Gold Package}\\[0.5em]
@@ -125,7 +125,7 @@ Quantum ML & Quantum computing basics & 2 days & \pounds{1,495} \\
 
 \begin{itemize}
     \item 4-bedroom farmhouse with modern amenities
-    \item High-speed fibre internet (1Gbps)
+    \item High-speed 5G internet (1Gbps)
     \item Tesla Powerwall and solar energy
     \item EV charging station
     \item Hot tub and wellness facilities
