--- a/dreamlab/reports/latex/sections/financial-projections-updated.tex
+++ b/dreamlab/reports/latex/sections/financial-projections-updated.tex
@@ -6,7 +6,7 @@ DreamLab's diversified revenue model capitalizes on multiple high-growth markets
 
 \subsubsection{Revenue Stream Breakdown}
 
-\begin{table}[H]
+\begin{table}
 \centering
 \begin{tabular}{lrrrrr}
 \toprule
@@ -31,7 +31,7 @@ Accommodation & \pounds{45,000} & \pounds{90,000} & \pounds{150,000} & \pounds{1
 
 \subsection{Student Volume Projections}
 
-\begin{table}[H]
+\begin{table}
 \centering
 \begin{tabular}{lrrrrr}
 \toprule
@@ -50,7 +50,7 @@ Online Learners & 50 & 200 & 500 & 1,000 & 1,600 \\
 
 \subsection{Operating Expenses}
 
-\begin{table}[H]
+\begin{table}
 \centering
 \begin{tabular}{lrrrrr}
 \toprule
@@ -89,7 +89,7 @@ Miscellaneous & \pounds{10,000} & \pounds{20,000} & \pounds{30,000} & \pounds{40
 
 \subsection{Profitability Analysis}
 
-\begin{table}[H]
+\begin{table}
 \centering
 \begin{tabular}{lrrrrr}
 \toprule
@@ -112,62 +112,80 @@ Net Margin & -89\% & 6\% & 46\% & 51\% & 53\% \\
 
 \subsection{Cash Flow Projections}
 
-\begin{figure}[H]
+% Commenting out pgfplots chart due to "Dimension too large" error
+% \begin{figure}
+% \centering
+% \begin{tikzpicture}
+% \begin{axis}[
+%     title={5-Year Cash Flow Projection},
+%     xlabel={Year},
+%     ylabel={Cash Flow (\pounds)},
+%     xmin=0.5, xmax=5.5,
+%     ymin=-1000000, ymax=4000000,
+%     xtick={1,2,3,4,5},
+%     scaled ticks=false,
+%     yticklabel={\pgfmathparse{\tick/1000000}\pgfmathprintnumber{\pgfmathresult}M},
+%     legend pos=north west,
+%     ymajorgrids=true,
+%     grid style=dashed,
+%     width=\textwidth,
+%     height=8cm,
+% ]
+%
+% \addplot[
+%     color=dreamlab-blue,
+%     mark=square*,
+%     line width=2pt
+% ]
+% coordinates {
+%     (1,-480000)
+%     (2,102000)
+%     (3,1783000)
+%     (4,2842000)
+%     (5,3746000)
+% };
+% \addlegendentry{Net Income}
+%
+% \addplot[
+%     color=dreamlab-green,
+%     mark=*,
+%     line width=2pt
+% ]
+% coordinates {
+%     (1,-480000)
+%     (2,-378000)
+%     (3,1405000)
+%     (4,4247000)
+%     (5,7993000)
+% };
+% \addlegendentry{Cumulative Cash}
+%
+% \end{axis}
+% \end{tikzpicture}
+% \end{figure}
+
+\begin{table}
 \centering
-\begin{tikzpicture}
-\begin{axis}[
-    title={5-Year Cash Flow Projection},
-    xlabel={Year},
-    ylabel={Cash Flow (\pounds)},
-    xmin=0.5, xmax=5.5,
-    ymin=-1000000, ymax=4000000,
-    xtick={1,2,3,4,5},
-    scaled ticks=false,
-    yticklabel={\pgfmathparse{\tick/1000000}\pgfmathprintnumber{\pgfmathresult}M},
-    legend pos=north west,
-    ymajorgrids=true,
-    grid style=dashed,
-    width=14cm,
-    height=8cm,
-]
-
-\addplot[
-    color=dreamlab-blue,
-    mark=square*,
-    line width=2pt
-]
-coordinates {
-    (1,-480000)
-    (2,102000)
-    (3,1783000)
-    (4,2842000)
-    (5,3746000)
-};
-\addlegendentry{Net Income}
-
-\addplot[
-    color=dreamlab-green,
-    mark=*,
-    line width=2pt
-]
-coordinates {
-    (1,-480000)
-    (2,-378000)
-    (3,1405000)
-    (4,4247000)
-    (5,7993000)
-};
-\addlegendentry{Cumulative Cash}
-
-\end{axis}
-\end{tikzpicture}
-\end{figure}
+\begin{tabular}{lrrrrr}
+\toprule
+\textbf{Year} & \textbf{Net Income} & \textbf{Depreciation} & \textbf{CapEx} & \textbf{Working Capital} & \textbf{Free Cash Flow} \\
+\midrule
+Year 1 & (\pounds{480,000}) & \pounds{120,000} & (\pounds{700,000}) & (\pounds{50,000}) & (\pounds{1,110,000}) \\
+Year 2 & \pounds{102,000} & \pounds{140,000} & (\pounds{150,000}) & (\pounds{30,000}) & \pounds{62,000} \\
+Year 3 & \pounds{1,783,000} & \pounds{160,000} & (\pounds{100,000}) & (\pounds{40,000}) & \pounds{1,803,000} \\
+Year 4 & \pounds{2,842,000} & \pounds{180,000} & (\pounds{150,000}) & (\pounds{30,000}) & \pounds{2,842,000} \\
+Year 5 & \pounds{3,746,000} & \pounds{200,000} & (\pounds{200,000}) & (\pounds{20,000}) & \pounds{3,726,000} \\
+\midrule
+\textbf{Cumulative} & \textbf{\pounds{7,993,000}} & & & & \textbf{\pounds{7,323,000}} \\
+\bottomrule
+\end{tabular}
+\end{table}
 
 \subsection{Investment Requirements \& Use of Funds}
 
 \subsubsection{Total Investment: \pounds{950,000}}
 
-\begin{table}[H]
+\begin{table}
 \centering
 \begin{tabular}{lrr}
 \toprule
@@ -196,14 +214,14 @@ Working Capital & \pounds{50,000} & 5\% \\
 \begin{itemize}
     \item \textbf{Payback Period}: 2.8 years
     \item \textbf{Internal Rate of Return (IRR)}: 52\% over 5 years
-    \item \textbf{Net Present Value (NPV)}: \pounds{4.2M at 12\% discount rate
+    \item \textbf{Net Present Value (NPV)}: \pounds{4.2M at 12\% discount rate}
     \item \textbf{Return on Investment (ROI)}: 740\% by Year 5
 \end{itemize}
 \end{keypoint}
 
 \subsection{Sensitivity Analysis}
 
-\begin{table}[H]
+\begin{table}
 \centering
 \begin{tabular}{lrrr}
 \toprule
@@ -219,7 +237,7 @@ Worst Case (-40\%) & 60\% & \pounds{1,094,000} & \pounds{1,600,000} \\
 
 \subsection{Key Financial Metrics}
 
-\begin{table}[H]
+\begin{table}
 \centering
 \begin{tabular}{lrrrrr}
 \toprule
